--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body, html {
   margin: 0;
   padding: 0;
   height: 100%;
-  font-family: Lexend, sans-serif;
+  font-family: Arial, sans-serif;
 }
 
 .container {
