--- a/styles.css
+++ b/styles.css
@@ -30,3 +30,14 @@ textarea {
   height: 100%;
   border: none;
 }
+
+@media (max-width: 768px) {
+  .container {
+    flex-direction: column;
+  }
+
+  .editor, .preview {
+    width: 100%;
+    height: 50%;
+  }
+}
